Fix too long lists from "floating"

--- a/topics/static/css/sass/_layout.scss
+++ b/topics/static/css/sass/_layout.scss
@@ -113,9 +113,6 @@ header .site-header-nav .wrapper {
     min-height: 41px;
     ul {
         min-height: 24px;
-        position: absolute;
-        bottom: 0px;
-        width: 100%;
     }
 }
 
